# Predection

./: .gitignore  GNN_TECHNICAL_SUMMARY.md  README.md  pyproject.toml  requirements.txt
docs/: FL_DESIGN_PLAN.md  FL_IMPLEMENTATION_STEPS.md  GNN_MODEL_ARCHITECTURE.md  INTEGRATING_CURRENT_TRAFFIC.md
models/models/: best_network_aware_model.pt  network_aware_mappings.pkl  training_history.pkl
notebooks/: analyze_and_train_network_aware.ipynb
scripts/: analyze_and_train_network_aware.py  generate_realistic_network_data.py
