[tool.poetry]
name = "gnn-attack-prediction"
version = "0.2.0"
description = "Federated GNN-based attack technique prediction for ICS with network-aware graph structure"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Core ML/DL
torch = "^2.0.0"
torch-geometric = "^2.4.0"

# Data processing
pandas = "^2.0.0"
numpy = "^1.24.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# ML utilities
scikit-learn = "^1.3.0"

# Utilities
requests = "^2.31.0"
tqdm = "^4.65.0"

# Federated Learning (optional, for future enhancements)
# flower = "^1.5.0"  # Uncomment if using Flower framework
# pysyft = "^0.8.0"  # Uncomment if using PySyft

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
